<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LernActivity">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learninfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnlearntemp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btnLearnList"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnLearnRandom"
        app:layout_constraintEnd_toStartOf="@+id/divider5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLearnRandom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btnLearnRandom"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnLearnReview"
        app:layout_constraintEnd_toStartOf="@+id/divider5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLearnReview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/btnLearnReview"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnLearnBack"
        app:layout_constraintEnd_toStartOf="@+id/divider5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnLearnBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/selectBack"
        app:layout_constraintBottom_toTopOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider5"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/listDivider"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>