<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <TextView
        android:id="@+id/tvInfoLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:autoLink="web"
        android:text="@string/infoLink"
        android:textColor="@color/textColor2"
        android:textColorLink="@color/textColor2"
        app:layout_constraintBottom_toTopOf="@+id/btnInfoBack"
        app:layout_constraintStart_toEndOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:autoLink="email"
        android:text="@string/infoMail"
        android:textColor="@color/textColor2"
        android:textColorLink="@color/textColor2"
        app:layout_constraintBottom_toTopOf="@+id/tvInfoLink"
        app:layout_constraintStart_toEndOf="@+id/textView26" />

    <Button
        android:id="@+id/btnInfoBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/selectBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/infoAPP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="Website"
        app:layout_constraintBottom_toTopOf="@+id/btnInfoBack"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="EMail"
        app:layout_constraintBottom_toTopOf="@+id/textView25"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="Twitter"
        app:layout_constraintBottom_toTopOf="@+id/textView26"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTwitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:autoLink="web"
        android:text="@string/infoTwitter"
        android:textColor="@color/textColor2"
        android:textColorLink="@color/textColor2"
        app:layout_constraintBottom_toTopOf="@+id/textView22"
        app:layout_constraintStart_toEndOf="@+id/textView27" />

    <Button
        android:id="@+id/btnInfoExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ExportData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />
</android.support.constraint.ConstraintLayout>